--- a/Docs/css/site.css
+++ b/Docs/css/site.css
@@ -25,14 +25,9 @@ a {
 }
 
 #content {
-  margin: 3em 20% 0 20%;
+  margin: 0 20% 0 20%;
 }
 
 #footer {
   text-align: center;
-}
-
-.row {
-  border-top: 2px solid rgba(0, 0, 0, 0.2);
-  padding: 2em 0 1em 0;
 }
